<resources>
    <string name="app_name">Jitsichat</string>
    <string name="ACCOUNT_TYPE">org.jitsi.android.account</string>
    <string name="send_process_signal">Send Process Signal</string>
    <string name="stop_osgi_framework">Stop OSGi Framework</string>
    <string name="in_call_with">In call with </string>
    <string name="settings">Settings</string>
    <string name="username_hint">username@example.com</string>
    <string name="username_label">Username:</string>
    <string name="password">password</string>
    <string name="password_label">Password:</string>
    <string name="store_password">Remember password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="network">Network</string>
    <string name="choose_network">Choose a network</string>
    <string-array name="networks_array">
        <item>SIP</item>
        <item>XMPP</item>
    </string-array>
    <string-array name="networks_array_values">
        <item>SIP</item>
        <item>Jabber</item>
    </string-array>
    <string name="enter_name_or_number">Enter name or number</string>
    <string name="hang_up">Hang up call</string>
    <string name="accept_call_video">Answer call with video</string>
    <string name="hold">Put call on hold</string>
    <string name="show_call_info">Call info</string>
    <string name="show_call_zrtp_info">"Call ZRTP info</string>
    <string name="video_resolution">Video resolution</string>
    <string name="low_video_resolution">320x240</string>
    <string name="high_video_resolution">640x480</string>
    <string name="exit_app">Exit</string>
    <string name="service_gui_UNKNOWN_CONTACT">Unknown</string>
    <string name="service_gui_ACCOUNT_ME">Me</string>
    <string name="service_gui_ACCOUNT_SETTINGS">Account settings</string>
    <string name="service_gui_ACCOUNT_PASS_CHANGE">Change passwords</string>
    <string name="service_gui_ACCOUNT_DISCONNECTED">%s is disconnected</string>
    <string name="service_gui_CONTACT_PAUSED_TYPING">paused typing</string>
    <string name="service_gui_CONTACT_TYPING">is typing</string>
    <string name="service_gui_BUSY_STATUS">Busy</string>
    <string name="service_gui_ADD_AUTHORIZED_CONTACT">Add %s to your contact list</string>
    <string name="service_gui_ADD_GROUP_LOCAL_ERROR">        Failed to add group with name: %s. The problem occurred during a local IO operation.</string>
    <string name="service_gui_ADD_GROUP_EXIST_ERROR">        The group %s already exists in your contact list. Please choose another name.</string>
    <string name="service_gui_ADD_GROUP_NET_ERROR">        Failed to add group with name: %s. The problem occurred due to a network failure.
        Please check your network connection and try again.</string>
    <string name="service_gui_ADD_GROUP_ERROR">        Failed to add group with name: %s.</string>
    <string name="service_gui_ADD_GROUP_EMPTY_NAME">        The group name must not be empty.</string>
    <string name="service_gui_ADD_GROUP_HINT">        Enter group name</string>
    <string name="service_gui_ADD_GROUP">Create group</string>
    <string name="service_gui_AT">at</string>
    <string name="service_gui_AUTHENTICATION_REJECTED">contact has rejected your authorization request.</string>
    <string name="service_gui_AUTHENTICATION_WINDOW_TITLE">%s authentication</string>
    <string name="service_gui_AUTHENTICATION_REQUESTED">Authentication requested</string>
    <string name="service_gui_AUTHENTICATION_REQUESTED_SERVER">The %s server has requested your authentication.</string>
    <string name="service_gui_AUTHORIZE">Authorize</string>
    <string name="service_gui_AUTHORIZATION_ACCEPTED">contact has accepted your authorization request.</string>
    <string name="service_gui_AUTHORIZATION_REQUESTED">Authorization requested</string>
    <string name="service_gui_AUTHORIZATION_REQUESTED_INFO">The %s contact requests your authorization.</string>
    <string name="service_gui_AUTHORIZATION_RESPONSE">Authorization response</string>
    <string name="service_gui_CREATE_GROUP_NAME">        In the field below enter the name of the group you would like to create.</string>
    <string name="service_gui_DENY">Deny</string>
    <string name="service_gui_DURATION">duration</string>
    <string name="service_gui_EDITED_AT">edited at %s</string>
    <string name="service_gui_IGNORE">Ignore</string>
    <string name="service_gui_INFO">Info</string>
    <string name="service_gui_LAST_MSG_CORRECTION">Last message correction</string>
    <string name="service_gui_NOT_AUTHORIZED">Not authorized</string>
    <string name="service_gui_OUTGOING_CALL">Outgoing call</string>
    <string name="service_gui_OUTGOING_CALL_MSG">Connecting with %s…</string>
    <string name="service_gui_TYPE_YOUR_REQUEST">Type your request here</string>
    <string name="service_gui_REQUEST">Request</string>
    <string name="service_gui_REQUEST_AUTHORIZATION">Request authorization</string>
    <string name="service_gui_REQUEST_AUTHORIZATION_MSG">        Can\'t add %1$s to your Contact List.
        %1$s must authorize your request to add him/her.
        Please enter your request below.</string>
    <string name="service_gui_RE_REQUEST_AUTHORIZATION">        Re-request authorization</string>
    <string name="service_gui_REMOVE">        Remove</string>
    <string name="service_gui_REMOVE_CONTACT">        Remove contact</string>
    <string name="service_gui_REMOVE_CONTACT_TEXT"><DIV>Are you sure you want to remove <B> %s </B><BR />from your contact list?</DIV></string>
    <string name="service_gui_REMOVE_ACCOUNT">Remove account</string>
    <string name="service_gui_REMOVE_ACCOUNT_MESSAGE">        Are you sure you want to remove %s?</string>
    <string name="service_gui_RESTORING">        Restoring&#8230;</string>
    <string name="service_gui_SHUTDOWN_IN_PROGRESS">        Shutdown in progress&#8230;</string>
    <string name="service_gui_VOLUME_GAIN_LEVEL">Volume gain level: %s%%</string>
    <string name="service_gui_WARN_CALL_IN_PROGRESS">        Can\'t do this during a call</string>
    <string name="service_gui_SIGN_IN">Sign in</string>
    <string name="service_gui_SIGN_UP">Sign up</string>
    <string name="service_gui_SIGN_OUT">Sign out</string>
    <string name="service_gui_CREATE_ACCOUNT">Create account</string>
    <string name="service_gui_LOGIN_FAILED">        Login failed</string>
    <string name="service_gui_LOGIN_NETWORK_ERROR">        Unable to log in with account: User name: {0}, Server name: {1}, due to a network failure. Please check your network connection.</string>
    <string name="service_gui_LOGIN_GENERAL_ERROR">        An error occurred while logging in with account: User name: {0}, Server name: {1}:{2}.</string>
    <string name="service_gui_LOGIN_INTERNAL_ERROR">        An error occurred while logging in with account: User name: {0}, Server name: {1}. This is most probably an internal application error. Please report the problem to our developers mailing list (dev@jitsi.java.net).</string>
    <string name="service_gui_LOGIN_INVALID_PROPERTIES_ERROR">        Unable to log in with account: User name: {0}, Server name: {1}, due to an account configuration problem. Please check your account configuration.</string>
    <string name="service_gui_USERNAME_NULL">        Please fill your username and password.</string>
    <string name="service_gui_USER_EXISTS_ERROR">        This user already exists on the selected network. Please choose another user or network.</string>
    <string name="service_gui_SPECIFY_SERVER">        Please complete the server part of your account.</string>
    <string name="service_gui_ACCOUNT_CREATION_FAILED">        We failed to create your account due to the following error:</string>
    <string name="plugin_reconnectplugin_CONNECTION_FAILED_MSG">        Connection failed for the following account:\n
        User name: {0}, Server name: {1}.\n
        Please check your settings or contact your network administrator for more information.</string>
    <string name="plugin_reconnectplugin_NETWORK_DOWN">        Network connectivity lost!</string>
    <string name="service_gui_AVATAR_SET_ERROR">Failed to set avatar for %s</string>
    <string name="service_gui_CLOSE">Close</string>
    <string name="service_gui_CLOSE_CHAT">Close chat</string>
    <string name="service_gui_CLOSE_ALL_CHATS">Close all chats</string>
    <string name="service_gui_COPY_MESSAGE_TEXT">Copy text</string>
    <string name="service_gui_OK">OK</string>
    <string name="service_gui_YES">Yes</string>
    <string name="service_gui_NO">No</string>
    <string name="service_gui_CANCEL">Cancel</string>
    <string name="service_gui_SEARCH">Search</string>
    <string name="service_gui_ADD_CONTACT">Add contact</string>
    <string name="service_gui_ON">On</string>
    <string name="service_gui_ONLINE">Online</string>
    <string name="service_gui_OFF">Off</string>
    <string name="service_gui_OFFLINE">Offline</string>
    <string name="service_gui_FFC_STATUS">Free for chat</string>
    <string name="service_gui_AWAY_STATUS">Away</string>
    <string name="service_gui_DND_STATUS">Do not disturb</string>
    <string name="service_gui_RETRY">Retry</string>
    <string name="service_gui_SEND_LOGS_QUESTION">Jitsi has just recovered after serious crash. Do you want to send the logs ?</string>
    <string name="service_gui_ERROR">Error</string>
    <string name="service_gui_ERROR_WAS">Error was: {0}</string>
    <string name="service_gui_WARNING">Warning</string>
    <string name="service_gui_AUTHENTICATION_FAILED">        Authentication failed for {0}. The password you entered is not valid.</string>
    <string name="service_gui_CONNECTION_FAILED_MSG">Connection failed for the
        following account: User name: {0}, Server name: {1}. Please check your
        network connection or contact your network administrator for more
        information.</string>
    <string name="service_gui_NEW_ACCOUNT">Add new account</string>
    <string name="service_gui_LOADING">Loading</string>
    <string name="service_gui_ACCOUNTS">Accounts</string>
    <string name="service_gui_CALL">Call</string>
    <string name="service_gui_VIDEO_CALL">Video call</string>
    <string name="service_gui_CONTACTS">Contacts</string>
    <string name="service_gui_ENTER_NAME_OR_NUMBER">Enter name or number</string>
    <string name="service_gui_MISSED_CALLS_TOOL_TIP">Missed calls from:</string>
    <string name="service_gui_MOVE">Move</string>
    <string name="service_gui_MOVE_SUBCONTACT">Move contact</string>
    <string name="service_gui_MOVE_SUBCONTACT_MSG">    Select the contact or the group, where you would like to move the selected contact.</string>
    <string name="service_gui_MOVE_SUBCONTACT_FAILED">    The contact you have chosen is the same as \n the source one. Please choose another contact!</string>
    <string name="service_gui_MOVE_SUBCONTACT_QUESTION">    Are you sure you want to move %1$s to %2$s?</string>
    <string name="service_gui_MOVE_TO_GROUP">Move to group</string>
    <string name="service_gui_MOVE_CONTACT">Move Contact</string>
    <string name="service_gui_MOVE_CONTACT_ERROR">Contact cannot be moved</string>
    <string name="main_chat">Chat</string>
    <string name="main_contact">Contacts</string>
    <string name="main_call">Calls</string>
    <string name="service_gui_ADD">Add</string>
    <string name="service_gui_CONTACT_NAME">ID or Number</string>
    <string name="service_gui_DISPLAY_NAME">Display name</string>
    <string name="service_gui_SELECT_ACCOUNT">Select account</string>
    <string name="service_gui_SELECT_GROUP">Select group</string>
    <string name="repassword">password(confirm)</string>
    <string name="jabberreg_servername">server\'s name or address</string>
    <string name="jabberreg_serverport">port (default 5222)</string>
    <string name="jabberreg_reg_title">Register a XMPP/Jabber account</string>
</resources>