<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/screen_padding"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/background">
        
    	<TextView
            style="@style/LargeFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/jabberreg_reg_title"
            android:layout_marginBottom="@dimen/between_padding"
            android:gravity="center"/>
    	
    	<EditText
            android:id="@+id/jabber_reg_serverName"
            style="@style/JitsiLoginTextView"
            android:hint="@string/jabberreg_servername"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>
    	
    	<EditText
            android:id="@+id/jabber_reg_serverPort"
            style="@style/JitsiLoginTextView"
            android:hint="@string/jabberreg_serverport"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>
    
		<EditText
            android:id="@+id/jabber_reg_usernameField"
            style="@style/JitsiLoginTextView"
            android:hint="@string/username_hint"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>

        <EditText
            android:id="@+id/jabber_reg_passwordField"
            style="@style/JitsiLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>
        
        <EditText
            android:id="@+id/jabber_reg_passwordField2"
            style="@style/JitsiLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/repassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>
        
        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:id="@+id/jabber_reg_btnSinUp"
	            android:text="@string/service_gui_SIGN_UP"
	            android:focusable="true"
	            android:textColor="#ffffff"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/item_height"
	            android:background="@drawable/signin_button"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"/>
</LinearLayout>
