<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/screen_padding"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/background">

    	<ImageView
    	    android:id="@+id/act_loginLogo"
    	    android:src="@drawable/logo"
    	    android:layout_gravity="center"
    	    android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="@dimen/between_padding"/>

        <EditText
            android:id="@+id/act_usernameField"
            style="@style/JitsiLoginTextView"
            android:hint="@string/username_hint"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>

        <EditText
            android:id="@+id/act_passwordField"
            style="@style/JitsiLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/between_padding"/>

        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:weightSum="2"
            android:layout_marginBottom="@dimen/between_padding">          
        
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:id="@+id/act_signInButton"
	            android:text="@string/service_gui_SIGN_IN"
	            android:focusable="true"
	            android:textColor="#ffffff"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/item_height"
	            android:layout_gravity="center_horizontal"
	            android:background="@drawable/signin_button"
	            android:layout_weight="1"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"/>
	        
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:id="@+id/act_signUpButton"
	            android:text="@string/service_gui_SIGN_UP"
	            android:focusable="true"
	            android:textColor="#ffffff"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/item_height"
	            android:layout_gravity="center_horizontal"
	            android:background="@drawable/signin_button"
	            android:layout_weight="1"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"/>
        </LinearLayout>
        
</LinearLayout>