<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="@dimen/screen_padding"
              android:layout_centerHorizontal="true"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@drawable/background">

    <TextView
            style="@style/MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_gui_SELECT_ACCOUNT"
            android:id="@+id/selectAccountTxt"
            android:layout_marginBottom="@dimen/between_padding"/>
    <Spinner
            android:background="@drawable/whitespinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:id="@+id/spnr_selectAccount"
            android:layout_marginBottom="@dimen/between_padding"/>
    <TextView
            style="@style/MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_gui_SELECT_GROUP"
            android:id="@+id/selectGroupTxt"
            android:layout_marginBottom="@dimen/between_padding"/>
    <Spinner
            android:background="@drawable/whitespinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"            
            android:paddingLeft="10dp"
            android:id="@+id/spnr_selectGroup"
            android:layout_marginBottom="@dimen/between_padding"/>
    <TextView
            style="@style/MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_gui_CONTACT_NAME"
            android:id="@+id/contactNameTxt"
            android:layout_marginBottom="@dimen/between_padding"/>
    <EditText
            style="@style/JitsiLoginTextView"          
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:id="@+id/edit_ContactName"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/between_padding"/>
    <TextView
            style="@style/MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_gui_DISPLAY_NAME"
            android:id="@+id/displayNameText"
            android:layout_marginBottom="@dimen/between_padding"/>
    <EditText
            style="@style/JitsiLoginTextView"          
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:id="@+id/edit_DisplayName"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/between_padding"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:text="@string/service_gui_ADD"
            android:id="@+id/btn_addcontact"
            android:focusable="true"
            android:background="@drawable/signin_button"
            android:onClick="onAddClicked"/>
</LinearLayout>